syntax = "proto3";

package go_kafka_protobuf;
option go_package = "github.com/xtruder/synapse/proto";

import "google/protobuf/timestamp.proto";
import "item.proto";

message User {
    string id = 1;
    string user_id = 2;
    string first_name = 6;
    string last_name = 7;
    string message = 3;
    google.protobuf.Timestamp timestamp = 4;
    repeated go_kafka_protobuf.Item items = 5;
}